--- a/wk4_home_coding.Rmd
+++ b/wk4_home_coding.Rmd
@@ -6,3 +6,65 @@ output: html_document
 ---
 
 
+
+# Ineqaulity task - week 4
+
+## Load packages
+```{r Load packages}
+library(sf)
+library(here)
+library(tidyverse)
+library(janitor)
+library(countrycode)
+library(tmap)
+library(wk)
+```
+
+
+##Read Files
+```{r Read Files}
+HDI <- read.csv(here::here('data','Gender Inequality Index (GII).csv'),
+                header = TRUE,
+                sep = ",",
+                skip = 5,
+                na="..",
+                nrows = 189,
+                encoding = "latin1")
+
+World <- st_read(here('data',
+                      'World_Countries_(Generalized)',
+                      'World_Countries__Generalized_.shp'))
+
+```
+
+## Join Data
+```{r Join Data}
+HDI_data <- HDI %>%
+  clean_names() %>%
+  select(country,x2010,x2019) %>%
+  mutate(diff=x2019-x2010) %>%
+  mutate(ISO_code_HDI=countrycode(country,origin = "country.name",destination = 'iso3c'))
+
+World_data <- World %>%
+  clean_names() %>%
+  mutate(ISO_code_World=countrycode(iso,origin = 'iso2c',destination = 'iso3c'))
+
+Join_data <- World_data %>%
+  clean_names() %>%
+  left_join(.,
+            HDI_data,
+            by=c('ISO_code_World'='ISO_code_HDI'))
+```
+
+
+#Plot Map
+```{r Plot Map}
+tmap_mode("plot")
+
+#tmap_options(check.and.fix = TRUE)
+Join_data %>%
+  qtm(.,fill = "diff")
+```
+
+
+
